fix(EmbeddedChart): set height not to overflow

--- a/src/components/EmbeddedChart.css
+++ b/src/components/EmbeddedChart.css
@@ -3,8 +3,7 @@
 }
 
 .EmbeddedChart > iframe {
-  min-height: 100vh;
-  max-height: 720px;
+  min-height: 120vh;
   max-width: 1140px;
 }
 
